--- a/search/templates/search/base.html
+++ b/search/templates/search/base.html
@@ -1,3 +1,4 @@
+{% load widget_tweaks %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -5,33 +6,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>٩(ˊᗜˋ*)و</title>
+    <!--
+    <link href="{% static 'css/style.min.css' %}" type="text/css" rel="stylesheet" />
+    -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
   </head>
-  {% load bootstrap4 %}
-  {% bootstrap_css %}
-  {% bootstrap_javascript jquery='full' %}
-  <body style="margin-top:3.5em; background-color: black">
-    <nav class="navbar navbar-dark bg-transparent fixed-top">
-      <div class="navbar-brand">なんちゃって検索</div>
-      <div class="dropdown">
-        <button class="navbar-toggler dropdown-toggle" id="navmenu1"
-          type="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navmenu1">
-            {% if request.path != '/upload' %}
-              <a class="nav-link" href="{% url 'upload' %}">アップロード</a>
-            {% endif %}
-            {% if request.path != '/' %}
-              <a class="nav-link" href="/">検索</a>
-            {% endif %}
+  <body>
+    <nav class="flex items-center justify-between flex-wrap bg-blue-300 p-6">
+      <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <span class="font-semibold text-xl tracking-tight">なんちゃって検索</span>
+      </div>
+      <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+        <div class="text-sm lg:flex-grow">
+          <form class="form-inline" method="GET">
+            {%for form in search_form%}
+              {{form|add_class:"form-control"}}
+            {%endfor%}
+          </form>
+        </div>
+        <div>
+          <a href="{% url 'upload' %}" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Upload</a>
         </div>
       </div>
-    </nav><hr />
+    </nav>
     {% block content %}
     {% endblock %}
   </body>
-{% load static %}
 </html>
