--- a/search/templates/search/meibo_list.html
+++ b/search/templates/search/meibo_list.html
@@ -2,24 +2,18 @@
 {% load widget_tweaks %}
 {% block content %}
 <div style="margin: 1em;">
-  <div style="margin:0em 0em 1em 0em;">
-    <form class="form-inline" method="GET">
-      {%for form in search_form%}
-        {{form|add_class:"form-control mr-sm-2 w-25 bg-transparent text-white"}}
-        <button type="submit" class="btn btn-outline-success my-2 my-sm-0">探す</button>
-      {%endfor%}
-    </form>
-  </div>
-  <table class="table bg-transparent text-white table-hover table-striped table-bordered">
+  <table class="table-auto">
+      <th>
+      </th>
     {% for r in meibo_list %}
       <tr>
-        <td>{{r.simei}}</td>
-        <td>{{r.simei_kana}}</td>
-        <td>{{r.seibetu}}</td>
-        <td>{{r.blood_gata}}</td>
-        <td>{{r.tanjo_bi}}</td>
-        <td>{{r.chiiki}}</td>
-        <td>{{r.phone_bango}}</td>
+        <td class="border">{{r.simei}}</td>
+        <td class="border">{{r.simei_kana}}</td>
+        <td class="border">{{r.seibetu}}</td>
+        <td class="border">{{r.blood_gata}}</td>
+        <td class="border">{{r.tanjo_bi}}</td>
+        <td class="border">{{r.chiiki}}</td>
+        <td class="border">{{r.phone_bango}}</td>
       </tr>
       {% endfor %}
       </div>
