--- a/search/templates/search/base.html
+++ b/search/templates/search/base.html
@@ -1,4 +1,3 @@
-{% load widget_tweaks %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -12,24 +11,26 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="flex items-center justify-between flex-wrap bg-blue-300 p-6">
+    <nav class="flex items-center justify-between flex-wrap bg-indigo-600 p-4">
       <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <span class="font-semibold text-xl tracking-tight">なんちゃって検索</span>
+        <span class="font-semibold text-xl tracking-tight"><a href="/">なんちゃって検索</a></span>
       </div>
       <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
         <div class="text-sm lg:flex-grow">
           <form class="form-inline" method="GET">
-            {%for form in search_form%}
-              {{form|add_class:"form-control"}}
-            {%endfor%}
+            {{ search_form }}
           </form>
         </div>
         <div>
-          <a href="{% url 'upload' %}" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Upload</a>
+          {% if upload_form == None %}
+          <a href="{% url 'upload' %}" class="text-sm px-4 py-1 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-blue-300 mt-4 lg:mt-0">Upload</a>
+          {% endif %}
         </div>
       </div>
     </nav>
-    {% block content %}
-    {% endblock %}
+    <div class="min-w-full m-6 p-4">
+      {% block content %}
+      {% endblock %}
+    </div>
   </body>
 </html>
