--- a/search/templates/search/upload.html
+++ b/search/templates/search/upload.html
@@ -1,13 +1,10 @@
 {% extends 'search/base.html' %}
-{% load widget_tweaks %}
 {% block content %}
-  <div id="div_g1" class="input-group-append" style="margin:5px 0em;">
-    <div class="form-group" style="margin: 1em 0em 3em 1em;">
-      <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{upload_form}}
-        <button id="upload" type="submit" class="btn btn-secondary">アップロード</button>
-      </form>
-    </div>
-  </div>
+<div class="p-7">
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ upload_form }}
+    <button id="upload" type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-3 py-1 rounded">Upload</button>
+  </form>
+</div>
 {% endblock %}
