--- a/search/templates/search/base.html
+++ b/search/templates/search/base.html
@@ -5,13 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>٩(ˊᗜˋ*)و</title>
-    <!--
-    <link href="{% static 'css/style.min.css' %}" type="text/css" rel="stylesheet" />
-    -->
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+    <link href="{% static 'css/uho.css' %}" type="text/css" rel="stylesheet" />
+    <link href="{% static 'css/tailwind.min.css' %}" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="flex items-center justify-between flex-wrap bg-indigo-600 p-4">
+    <nav class="flex items-center justify-between flex-wrap bg-blue-400 p-4">
       <div class="flex items-center flex-shrink-0 text-white mr-6">
         <span class="font-semibold text-xl tracking-tight"><a href="/">なんちゃって検索</a></span>
       </div>
@@ -21,11 +19,11 @@
             {{ search_form }}
           </form>
         </div>
+        {% if upload_form == None %}
         <div>
-          {% if upload_form == None %}
           <a href="{% url 'upload' %}" class="text-sm px-4 py-1 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-blue-300 mt-4 lg:mt-0">Upload</a>
-          {% endif %}
         </div>
+        {% endif %}
       </div>
     </nav>
     <div class="min-w-full m-6 p-4">
