--- a/search/templates/search/meibo_list.html
+++ b/search/templates/search/meibo_list.html
@@ -1,15 +1,15 @@
 {% extends 'search/base.html' %}
 {% block content %}
-<table class="table-auto">
+<table class="table-fixed">
   {% if meibo_list %}
   <thead>
-    <th>氏名</th>
-    <th>かな</th>
-    <th>性別</th>
-    <th>血液型</th>
-    <th>生年月日</th>
-    <th>居住地</th>
-    <th>電話番号</th>
+    <th class="border px-4 py-2">氏名</th>
+    <th class="border px-4 py-2">かな</th>
+    <th class="border px-4 py-2">性別</th>
+    <th class="border px-4 py-2">血液型</th>
+    <th class="border px-4 py-2">生年月日</th>
+    <th class="border px-4 py-2">居住地</th>
+    <th class="border px-4 py-2">電話番号</th>
   </thead>
   {% endif %}
   <tbody>
@@ -28,51 +28,25 @@
 </table>
 {% load extras %}
 {% if page_obj.paginator.num_pages > 1 %}
-<nav aria-label="Page navigation example" class="py-6">
+<nav class="py-6">
   <ul class="pagination inline-flex -space-x-px">
     <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
-      <a href="?{% page_link page_obj.previous_page_number %}" class="py-2 px-3 ml-0 leading-tight text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white" aria-label="前へ">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
+      <a href="?{% page_link page_obj.previous_page_number %}" class="page-link py-2 px-3 ml-0 leading-tight text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"><span>&laquo;</span></a>
     </li>
     {% for page_num in page_obj.paginator.page_range %} 
     <li class="page-item {% if page_num == page_obj.number %}active{% endif %}">
-      <a href="?{% page_link page_num %}" class="py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">{{ page_num }}</a>
+      <a href="?{% page_link page_num %}" class="page-link py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">{{ page_num }}</a>
     </li>
     {% endfor %}
-    <li>
-      <a href="?{% page_link page_obj.next_page_number %}" class="py-2 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white" aria-label="次へ">
-        <span aria-hidden="true">&raquo;</span>
-      </a>
+    <li class="page-item {% if not page_obj.has_next %}disabled{% endif %}">
+      <a href="?{% page_link page_obj.next_page_number %}" class="page-link py-2 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"><span>&raquo;</span></a>
     </li>
   </ul>
 </nav>
 {% endif %}
-<!--
-{% if page_obj.paginator.num_pages > 1 %}
-  <ul class="pagination">
-    <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
-      <a class="page-link" href="?{% page_link page_obj.previous_page_number %}" aria-label="前へ">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-    </li>
-    {% for page_num in page_obj.paginator.page_range %} 
-      <li class="page-item {% if page_num == page_obj.number %}active{% endif %}">
-        <a class="page-link" href="?{% page_link page_num %}">{{ page_num }}</a>
-      </li>
-    {% endfor %}
-    <li class="page-item {% if not page_obj.has_next %}disabled{% endif %}">
-      <a class="page-link" href="?{% page_link page_obj.next_page_number %}" aria-label="次へ">
-        <span aria-hidden="true">&raquo;</span>
-      </a>
-    </li>
-  </ul>
--->
-{% endif %}
 <script type="text/javascript">
   const txt = document.getElementById('id_keywords');
-  const len = txt.value.length;
-  txt.focus(); // id_keywords にフォーカス
+  const len = txt.value.length; txt.focus();
   txt.setSelectionRange(len, len);
 </script>
 {% endblock %}
