検索ボタン追加

--- a/search/templates/search/base.html
+++ b/search/templates/search/base.html
@@ -17,6 +17,7 @@
         <div class="text-sm lg:flex-grow">
           <form class="form-inline" method="GET">
             {{ search_form }}
+             <button id="upload" type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-3 py-1 rounded">検索</button>
           </form>
         </div>
         {% if upload_form == None %}
