--- a/search/templates/search/base.html
+++ b/search/templates/search/base.html
@@ -1,33 +1,31 @@
-{% load static %}
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>٩(ˊᗜˋ*)و</title>
-    <link href="{% static 'css/uho.css' %}" type="text/css" rel="stylesheet" />
-    <link href="{% static 'css/tailwind.min.css' %}" type="text/css" rel="stylesheet" />
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
   </head>
   <body>
-    <nav class="flex items-center justify-between flex-wrap bg-blue-400 p-4">
-      <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <span class="font-semibold text-xl tracking-tight"><a href="/">なんちゃって検索</a></span>
+    <nav class="navbar navbar-default bg-primary">
+      <div class="container-fluid">
+        <span><a class="navbar-brand text-light" href="/">なんちゃって検索</a></span>
       </div>
-      <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-        <div class="text-sm lg:flex-grow">
-          <form class="form-inline" method="GET">
+      <div>
+        <div>
+          <form method="GET">
             {{ search_form }}
-             <button id="upload" type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-3 py-1 rounded">検索</button>
+             <button id="upload" type="submit">検索</button>
           </form>
         </div>
         {% if upload_form == None %}
         <div>
-          <a href="{% url 'upload' %}" class="text-sm px-4 py-1 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-blue-300 mt-4 lg:mt-0">Upload</a>
+          <a href="{% url 'upload' %}">Upload</a>
         </div>
         {% endif %}
       </div>
     </nav>
-    <div class="min-w-full m-6 p-4">
+    <div>
       {% block content %}
       {% endblock %}
     </div>
