--- a/search/templates/search/upload.html
+++ b/search/templates/search/upload.html
@@ -4,7 +4,7 @@
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ upload_form }}
-    <button id="upload" type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-3 py-1 rounded">Upload</button>
+    <button id="upload" type="submit">Upload</button>
   </form>
 </div>
 {% endblock %}
