bootstrapのナビバ更新

--- a/search/templates/search/base.html
+++ b/search/templates/search/base.html
@@ -5,24 +5,35 @@
     <title>٩(ˊᗜˋ*)و</title>
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <style>
+      .content {
+        margin-top: 20px;
+      }
+      .pagination {
+        margin-top: 20px;
+      }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-default bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <span><a class="navbar-brand text-light" href="/">なんちゃって検索</a></span>
-      </div>
-      <div>
-        <div>
-          <form method="GET">
+        <a class="navbar-brand" href="/">なんちゃって検索</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <form class="d-flex">
             {{ search_form }}
-             <button id="upload" type="submit">検索</button>
+            <button class="btn btn-outline-success" type="submit">検索</button>
           </form>
         </div>
-        {% if upload_form == None %}
-        <div>
-          <a href="{% url 'upload' %}">Upload</a>
-        </div>
-        {% endif %}
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'upload' %}" tabindex="-1">Upload</a>
+            {% if upload_form == None %}
+            {% endif %}
+          </li>
+        </ul>
       </div>
     </nav>
     <div>
