--- a/search/templates/search/meibo_list.html
+++ b/search/templates/search/meibo_list.html
@@ -1,49 +1,52 @@
 {% extends 'search/base.html' %}
 {% block content %}
-<table class="table-fixed">
-  {% if meibo_list %}
-  <thead>
-    <th class="border px-4 py-2">氏名</th>
-    <th class="border px-4 py-2">かな</th>
-    <th class="border px-4 py-2">性別</th>
-    <th class="border px-4 py-2">血液型</th>
-    <th class="border px-4 py-2">生年月日</th>
-    <th class="border px-4 py-2">居住地</th>
-    <th class="border px-4 py-2">電話番号</th>
-  </thead>
+<div class="container content">
+  <table class="table table-striped table-bordered">
+    {% if meibo_list %}
+    <thead>
+      <th class="px-4 py-2">氏名</th>
+      <th class="px-4 py-2">かな</th>
+      <th class="px-4 py-2">性別</th>
+      <th class="px-4 py-2">血液型</th>
+      <th class="px-4 py-2">生年月日</th>
+      <th class="px-4 py-2">居住地</th>
+      <th class="px-4 py-2">電話番号</th>
+    </thead>
+    {% endif %}
+    <tbody>
+      {% for r in meibo_list %}
+      <tr>
+        <td class="px-4 py-2">{{r.simei}}</td>
+        <td class="px-4 py-2">{{r.simei_kana}}</td>
+        <td class="px-4 py-2">{{r.seibetu}}</td>
+        <td class="px-4 py-2">{{r.blood_gata}}</td>
+        <td class="px-4 py-2">{{r.tanjo_bi}}</td>
+        <td class="px-4 py-2">{{r.chiiki}}</td>
+        <td class="px-4 py-2">{{r.phone_bango}}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+  {% load extras %}
+  {% if page_obj.paginator.num_pages > 1 %}
+  <nav class="container pagination">
+    <ul class="pagination">
+      <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
+        <a href="?{% page_link page_obj.previous_page_number %}" class="page-link"><span>&laquo;</span></a>
+      </li>
+      {% for page_num in page_obj.paginator.page_range %}
+        <li class="page-item {% if page_num == page_obj.number %}active{% endif %}">
+          <a href="?{% page_link page_num %}" class="page-link">{{ page_num }}</a>
+        </li>
+      {% endfor %}
+      <li class="page-item {% if not page_obj.has_next %}disabled{% endif %}">
+        <a href="?{% page_link page_obj.next_page_number %}" class="page-link"><span>&raquo;</span></a>
+      </li>
+    </ul>
+  </nav>
   {% endif %}
-  <tbody>
-    {% for r in meibo_list %}
-    <tr>
-      <td class="border px-4 py-2">{{r.simei}}</td>
-      <td class="border px-4 py-2">{{r.simei_kana}}</td>
-      <td class="border px-4 py-2">{{r.seibetu}}</td>
-      <td class="border px-4 py-2">{{r.blood_gata}}</td>
-      <td class="border px-4 py-2">{{r.tanjo_bi}}</td>
-      <td class="border px-4 py-2">{{r.chiiki}}</td>
-      <td class="border px-4 py-2">{{r.phone_bango}}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% load extras %}
-{% if page_obj.paginator.num_pages > 1 %}
-<nav class="py-6">
-  <ul class="pagination inline-flex -space-x-px">
-    <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
-      <a href="?{% page_link page_obj.previous_page_number %}" class="page-link py-2 px-3 ml-0 leading-tight text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"><span>&laquo;</span></a>
-    </li>
-    {% for page_num in page_obj.paginator.page_range %} 
-    <li class="page-item {% if page_num == page_obj.number %}active{% endif %}">
-      <a href="?{% page_link page_num %}" class="page-link py-2 px-3 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">{{ page_num }}</a>
-    </li>
-    {% endfor %}
-    <li class="page-item {% if not page_obj.has_next %}disabled{% endif %}">
-      <a href="?{% page_link page_obj.next_page_number %}" class="page-link py-2 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"><span>&raquo;</span></a>
-    </li>
-  </ul>
-</nav>
-{% endif %}
+</div>
 <script type="text/javascript">
   const txt = document.getElementById('id_keywords');
   const len = txt.value.length; txt.focus();
